Ejemplos de jQuery.

--- a/holajquery.html
+++ b/holajquery.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title> </title>
     <script src="jquery-3.1.1.min.js"></script>
+      <script src="holajquery.js"></script>
 </head>
 <body>
+  
     <h1>Hola jQuery</h1>
     <p class="parrafo"> Parrafo 1</p>
 
