Ejemplos de mouse en jQuery.

--- a/holajquery.html
+++ b/holajquery.html
@@ -42,8 +42,9 @@
 
 
         //solo los que tienen  la clas boton.
+        //solo con el mouse
         $(function() {
-           $('.boton').on('click','boton', {
+           $('.boton').on('click', {
                //Aqui creamos el objeto.
                propiedad1: 'valor1',
                propiedad2: 'valor2'
